[GLT-4014] added requisition pauses (#200)